--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,28 +1,26 @@
-name: GitHub-Profile-3D-Contrib
-
+name: 3D Contribution Graph
 on:
-  schedule: # 03:00 JST == 18:00 UTC
-    - cron: "0 18 * * *"
+  schedule:
+    - cron: '0 0 * * *'  # Daily at 00:00 UTC
   workflow_dispatch:
-
-permissions:
-  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: generate-github-profile-3d-contrib
     steps:
-      - uses: actions/checkout@v5
-      - uses: yoshi389111/github-profile-3d-contrib@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USERNAME: ${{ github.repository_owner }}
+      - uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install Dependencies
+        run: npm install -g github-profile-3d-contrib
+      - name: Generate 3D Graph
+        run: github-profile-3d-contrib --username cssidhu0001 --output ./profile-3d-contrib/profile-night-rainbow.svg
       - name: Commit & Push
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add -A .
-          if git commit -m "generated"; then
-            git push
-          fi
+          git config --local user.name "github-actions"
+          git config --local user.email "actions@github.com"
+          git add ./profile-3d-contrib/profile-night-rainbow.svg
+          git commit -m "Update 3D contribution graph"
+          git push
