--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,42 +1,39 @@
 name: GitHub Metrics
 on:
-  schedule: [{cron: "0 * * * *"}] # hourly
+  schedule:
+    - cron: '0 0 * * *'   # Daily at midnight UTC
   workflow_dispatch:
 
 jobs:
-  github-metrics:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Metrics embed
-        uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          user: cssidhu0001
-          template: classic
-          base: header, activity, community, repositories, metadata
-          config_timezone: Asia/Kolkata
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
-          plugin_languages: yes
-          plugin_languages_ignored: >-
-            html, css
-          plugin_languages_details: bytes-size, percentage
-          plugin_languages_sections: most-used
-          plugin_languages_limit: 8
-          plugin_achievements: yes
-          plugin_achievements_threshold: C
-          plugin_achievements_secrets: yes
-          plugin_achievements_display: compact
-          plugin_stars: yes
-          plugin_stars_limit: 4
-          plugin_contributors: yes
+
+          # 🧠 Base
+          base: header, activity, community, repositories
+          base_indepth: yes
+
+          # 🕓 Activity
           plugin_activity: yes
           plugin_activity_limit: 5
           plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_visibility: public
-          plugin_activity_timestamps: yes
-          plugin_music: yes
-          plugin_music_provider: apple # spotify bhi ho sakta hai
-          plugin_music_mode: playlist
-          plugin_music_playlist: https://music.apple.com/in/playlist/top-100/pl.u-xxxxxx # optional
+
+          # 🌍 Languages
+          plugin_languages: yes
+          plugin_languages_ignored: html, css
+          plugin_languages_limit: 8
+          plugin_languages_details: bytes-size, percentage
+
+          # 📈 Repositories
+          plugin_repositories: yes
+          plugin_repositories_featured: cssidhu0001
+
+          # 🐍 Snake Contribution Graph
+          plugin_sponsors: no
+
+          # Theme & Config
+          config_timezone: Asia/Kolkata
+          config_order: base, activity, languages, repositories
